[package]
name = "reqwless"
version = "0.1.3"
edition = "2021"
resolver = "2"
description = "HTTP client for embedded devices"
documentation = "https://docs.rs/reqwless"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/reqwless"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>"
]
license = "Apache-2.0"
keywords = ["embedded", "async", "http", "no_std"]
exclude = [".github"]

[dependencies]
embedded-io = { version = "0.3.1", features = ["async"] }
heapless = "0.7"
base64 = {version = "0.13.0", default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
futures-util = { version = "0.3" }
embedded-io = { version = "0.3.1", features = ["async", "tokio"] }

[features]
defmt = [
    "dep:defmt",
    "embedded-io/defmt",
]
