[package]
name = "reqwless"
version = "0.4.0"
edition = "2021"
resolver = "2"
description = "HTTP client for embedded devices"
documentation = "https://docs.rs/reqwless"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/reqwless"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>"
]
license = "Apache-2.0"
keywords = ["embedded", "async", "http", "no_std"]
exclude = [".github"]

[dependencies]
embedded-io = { version = "0.4.0", features = ["async"] }
embedded-nal-async = "0.3.0"
httparse = { version = "1.8.0", default-features = false }
heapless = "0.7"
hex = { version = "0.4", default-features = false }
base64 = {version = "0.13.0", default-features = false }
rand_core = { version = "0.6", default-features = true }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }
embedded-tls = { version = "0.11", default-features = false, features = ["async"] }
rand_chacha = { version = "0.3", default-features = false }
nourl = "0.1.1"

[dev-dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-rustls = { version = "0.23.4" }
futures-util = { version = "0.3" }
embedded-io = { version = "0.4", features = ["async", "tokio"] }
rustls-pemfile = "1.0"
env_logger = "0.9"
log = "0.4"
rand = "0.8"

[features]
alloc = ["embedded-tls/alloc"]
defmt = [
    "dep:defmt",
    "embedded-io/defmt",
    "embedded-tls/defmt",
    "nourl/defmt",
]
