[package]
name = "reqwless"
version = "0.13.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"
description = "HTTP client for embedded devices"
documentation = "https://docs.rs/reqwless"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/reqwless"
license = "Apache-2.0"
keywords = ["embedded", "async", "http", "no_std"]
exclude = [".github"]

[dependencies]
buffered-io = { version = "0.5.4" }
embedded-io = { version = "0.6" }
embedded-io-async = { version = "0.6" }
embedded-nal-async = "0.8.0"
httparse = { version = "1.8.0", default-features = false }
heapless = "0.8"
hex = { version = "0.4", default-features = false }
base64 = { version = "0.21.0", default-features = false }
rand_core = { version = "0.6", default-features = true }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }
embedded-tls = { version = "0.17", default-features = false, optional = true }
rand_chacha = { version = "0.3", default-features = false }
esp-mbedtls = { version = "0.1", git = "https://github.com/esp-rs/esp-mbedtls.git", features = [
    "async",
], optional = true }
nourl = "0.1.3"

[dev-dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-rustls = { version = "0.23.4" }
futures-util = { version = "0.3" }
embedded-io-async = { version = "0.6", features = ["std"] }
embedded-io-adapters = { version = "0.6", features = ["std", "tokio-1"] }
rustls-pemfile = "1.0"
env_logger = "0.10"
log = "0.4"
rand = "0.8"

[features]
default = ["embedded-tls"]
alloc = ["embedded-tls?/alloc"]
defmt = [
    "dep:defmt",
    "embedded-io/defmt-03",
    "embedded-io-async/defmt-03",
    "embedded-tls?/defmt",
    "nourl/defmt",
    "heapless/defmt-03",
]
